# spark-orderbook-filler

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.testnet.json  docker-compose.yml
.github/workflows/: ci.yml
filler/: Cargo.toml
filler-cli/: Cargo.toml
filler-cli/src/: main.rs
filler-cli/src/commands/: cli.rs  mod.rs  utils.rs
filler-cli/src/commands/core/: cli.rs  mint.rs  mod.rs  prepare.rs  topup.rs
filler-cli/src/commands/info/: balances.rs  cli.rs  mod.rs
filler/src/: bot.rs  config.rs  error.rs  executer.rs  main.rs  operation.rs  trader.rs  types.rs
filler/src/orderbook/: envio.rs  mod.rs  order.rs  orderbook.rs  subscriber.rs
filler/src/price/: api.rs  coingecko.rs  mod.rs
filler/src/strategy/: strategy.rs
