[package]
name = "filler-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
spark-market-sdk = { version = "0.3.1" }
multiasset_sdk = { git = "https://github.com/compolabs/multiasset-contract.git" }
anyhow = "1.0.88"
dotenv = "0.15.0"
tokio-retry = "0.3.0"
