[package]
name = "filler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "=1.6.1"
schemars = "0.8"
log = "0.4"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
tokio-tungstenite = "0.19.0"
futures = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.62"
anyhow = "1.0.88"
fuels = { version = "0.66.4", features = ["fuel-core-lib"] }
# spark-market-sdk = { version = "0.3.1" }
spark-market-sdk = { git = "https://github.com/vecheslav/orderbook-contract.git", branch = "fix-with-account" }
chrono = "0.4.38"
env_logger = "0.11.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
async-trait = "0.1.82"
rand = "0.8.5"
dotenv = "0.15.0"

